--- a/estiloPrincipal.css
+++ b/estiloPrincipal.css
@@ -1,11 +1,4 @@
 :root{
-    --colorPrincipal: #FFC300;
-    --colorSecundario: #C70039 ;
-    --colorTerceario: #FF5733;
-    --colorCuarto: #900C3F ;
-    --colorQuinto: #581845;
-    --blanco: #FAF9E2;
-    --negro: #0E0E0E;
 
     --primer:#08A57A ;
     --segundo:#39AD30;
@@ -28,10 +21,15 @@ a{
     color: var(--negro);
 
 }
+.meta{
+    margin: 0;
+    padding: 0;
+    min-height: 90%;
+
+}
 body
 {
-    background-color: var(--tercero);
-    
+    background-color: var(--tercero);    
 }
 header
 {
@@ -43,7 +41,7 @@ header
 }
 .header__title
 {
-    font-size: 7vh;
+    font-size: calc(5.5vh + 3vw);
     text-align: center;
     font-weight: 900;
     color:var(--segundo);
@@ -54,28 +52,33 @@ header
     background-color: var(--tercero);
     padding: 1vh;
     margin: 2vh;
+    min-height: 70vh;
     margin-top: 5vh;
 }
 .mainContainer__tecnology
 {
     background-color: var(--primer);
     padding: 7vw;
-    margin: 1.5vh;
+    margin:-webkit-calc(1.5vh + 1vw);
     color: var(--negro);
 }
 .mainContainer__tecnology:last-child
 {
     background-color: var(--primer);
     padding: 7vw;
-    margin-bottom: 9.5vh;
+    margin-bottom: 10vh;
     color: var(--negro);
 }
 
 footer{
-    display:flex;
-    position: fixed;
-    width:100%;
-    height: 10vh;
+    width:100%; 
+    min-height: calc(7vh + 4vw);
     background-color:var(--segundo);
-    bottom: 0;
+    padding: calc(1.5vh + 1.5vw);
+    box-sizing: border-box;
+
+}
+.footer_text
+{
+    font-size: calc(1vh * 1vw);
 }
